--- a/TODO
+++ b/TODO
@@ -1,10 +1,8 @@
-- test all commands
-- refactor list_of_checksums in upload.py
-
-- Unit tests / CI
-- Add progress indication for archiving
-- Add message for https://github.com/tbumi/glacier-upload/issues/17
+- CI
+- Unit tests
 - https://help.github.com/en/articles/setting-guidelines-for-repository-contributors
 
-- If an error or exception is met, the current code just quit. Instead, it should automatically restart using the upload ID until the archive is fully uploaded.
-- When resuming an upload, the first step is to fetch the parts that are already upload. In current code, it displays "getting more parts" only without printing the part ID range.
+- Add progress indication for archiving
+- implement auto-retry on multipart upload failure
+  - it should ask the user for confirmation to continue
+  - implement a flag to auto retry without confirmation
