--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
-- Unit tests / CI
-- Add ability to verify multipart uploads by requesting a list of parts and checking them
-- Add ability to list/cancel in-progress uploads
-- Add ability to resume uploads
+- CI
+- Unit tests
+- https://help.github.com/en/articles/setting-guidelines-for-repository-contributors
+
 - Add progress indication for archiving
+- implement auto-retry on multipart upload failure
+  - it should ask the user for confirmation to continue
+  - implement a flag to auto retry without confirmation
