--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 -   Unit tests
 -   https://help.github.com/en/articles/setting-guidelines-for-repository-contributors
 
+-   Support multpart download of archives like in #25
 -   Add progress indication for archiving
 -   implement auto-retry on multipart upload failure
     -   it should ask the user for confirmation to continue
